--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<title>Frontend Mentor Blogr</title>
 </head>
 <body>
-	<main>
 	<header>
 	<div>
 	<div>
@@ -15,43 +14,45 @@
 	<img src="assets/images/logo.svg"/>
 	</div>
 	<div>
-	<a href="#">Product</a>
-	<i>
-	<img src="assets/icons/icon-arrow-dark.svg"/>
-	<a href="#">Overview</a>
-	<a href="#">Pricing</a>
-	<a href="#">Marketplace</a>
-	<a href="#">Features</a>
-	<a href="#">Integrations</a>
-	</i>
-
-	<a href="#">Company</a>
-	<i>
-	<img src="assets/icons/icon-arrow-dark.svg"/>
-	<a href="#">About</a>
-	<a href="#"> Team </a>
-	<a href="#">Blog</a>
-	<a href="#"> Careers </a>
-	</i>
 	
-	<a href="#"> Connect </a>
-	<i>
-	<img src="assets/icons/icon-arrow-dark.svg"/>
-	<a href="#"> Contact </a>
-	<a href="#"> Newsletter </a>
-	<a href="#"> LinkedIn </a>
-	</i>
+	<details>
+	<summary> <a href="#">Product</a> </summary>
+	<ul>
+	<li><a href="#">Overview</a></li>
+	<li><a href="#">Pricing</a></li>
+	<li><a href="#">Marketplace</a></li>
+	<li><a href="#">Features</a></li>
+	<li><a href="#">Integrations</a></li>
+	</ul>
+	</details>
 
+	<details>
+	<summary> <a href="#">Company</a> </summary>
+	<ul>
+	<li><a href="#"> About </a></li>
+	<li><a href="#"> Team </a></li>
+	<li><a href="#"> Blog </a></li>
+	<li><a href="#"> Careers </a></li>
+	</ul>
+	</details>
+
+	<details>
+	<summary> <a href="#"> Connect </a> </summary>
+	<ul>
+	<li><a href="#"> Contact </a></li>
+	<li><a href="#"> Newsletter </a></li>
+	<li><a href="#"> LinkedIn </a></li>
+	</ul>
+	</details>
+	
 	</div>
 	</div>
 	<div>
-	<button>
 	<a href="#">Login</a>
-	</button>
-	<button>
+
 	<a href="#">Sign Up</a>
-	</button>
-  	</div>
+	
+	</div>
 	</div>
 	
 	<div>
@@ -67,12 +68,14 @@
 	</div>
 	</header>
 
+	<main>
 	<section>
 	<div>
 	<h2>Designed for the future</h2>
-	<img src="assets/images/illustration-editor-desktop.svg"/>
-	<h2>Introducing an extensible editor</h2>
- 	<p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or change the looks of a blog.</p>
+	<div><img src="assets/images/illustration-editor-desktop.svg"/></div>
+	
+	<div> <h2>Introducing an extensible editor</h2>
+ 	<p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or change the looks of a blog.</p> </div>
 
 	<h2>Robust content management</h2>
 	<p>Flexible content management enables users to easily move through posts. Increase the usability of your blog by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
@@ -93,6 +96,7 @@
 	<p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but capable of producing even the most complicated sites.</p>
 	</div>
 	</section>
+	</main>
 
 	<footer>
 	<div>
@@ -100,27 +104,37 @@
 	</div>
 	<div>
 	<h3>Product</h3>
-	<a href="#">Overview</a><br>
-	<a href="#"> Pricing </a><br>
-	<a href="#"> Marketplace </a><br>
-	<a href="#"> Features </a><br>
-	<a href="#"> Integrations </a>
-
-	<h3> Company </h3>
-	<a href="#"> About </a><br>
-	<a href="#"> Team </a><br>
-	<a href="#"> Blog </a><br>
-	<a href="#"> Careers </a>
-
-	<h3> Connect </h3>
-	<a href="#"> Contact </a><br>
-	<a href="#"> Newsletter </a><br>
-	<a href="#"> LinkedIn </a>
+	<nav>
+	<ul>
+	<li><a href="#">Overview</a></li>
+	<li><a href="#"> Pricing </a></li>
+	<li><a href="#"> Marketplace </a></li>
+	<li><a href="#"> Features </a></li>
+	<li><a href="#"> Integrations </a></li>
+	</ul>
+	</nav>
 	
+	<h3> Company </h3>
+	<nav>
+	<ul>
+	<li><a href="#"> About </a></li>
+	<li><a href="#"> Team </a></li>
+	<li><a href="#"> Blog </a></li>
+	<li><a href="#"> Careers </a></li>
+	</ul>
+	</nav>
+	
+	<h3> Connect </h3>
+	<nav>
+	<ul>
+	<li><a href="#"> Contact </a></li>
+	<li><a href="#"> Newsletter </a></li>
+	<li><a href="#"> LinkedIn </a></li>
+	</ul>
+	</nav>
+
 	</div>
 	
 	</footer>
-
-	</main>
 </body>
 </html>
