--- a/index.html
+++ b/index.html
@@ -1,140 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-	<title>Frontend Mentor Blogr</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Frontend Mentor Blogr</title>
 </head>
+
 <body>
-	<header>
-	<div>
-	<div>
-	<div>
-	<div>
-	<img src="assets/images/logo.svg"/>
-	</div>
-	<div>
-	
-	<details>
-	<summary> <a href="#">Product</a> </summary>
-	<ul>
-	<li><a href="#">Overview</a></li>
-	<li><a href="#">Pricing</a></li>
-	<li><a href="#">Marketplace</a></li>
-	<li><a href="#">Features</a></li>
-	<li><a href="#">Integrations</a></li>
-	</ul>
-	</details>
+  <header>
+    <div>
+      <div>
+        <div>
+          <div>
+            <img src="assets/images/logo.svg" />
+          </div>
+          <div>
 
-	<details>
-	<summary> <a href="#">Company</a> </summary>
-	<ul>
-	<li><a href="#"> About </a></li>
-	<li><a href="#"> Team </a></li>
-	<li><a href="#"> Blog </a></li>
-	<li><a href="#"> Careers </a></li>
-	</ul>
-	</details>
+            <details>
+              <summary> <a href="#">Product</a> </summary>
+              <ul>
+                <li><a href="#">Overview</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Marketplace</a></li>
+                <li><a href="#">Features</a></li>ßß
+                <li><a href="#">Integrations</a></li>
+              </ul>
+            </details>
 
-	<details>
-	<summary> <a href="#"> Connect </a> </summary>
-	<ul>
-	<li><a href="#"> Contact </a></li>
-	<li><a href="#"> Newsletter </a></li>
-	<li><a href="#"> LinkedIn </a></li>
-	</ul>
-	</details>
-	
-	</div>
-	</div>
-	<div>
-	<a href="#">Login</a>
+            <details>
+              <summary> <a href="#">Company</a> </summary>
+              <ul>
+                <li><a href="#"> About </a></li>
+                <li><a href="#"> Team </a></li>
+                <li><a href="#"> Blog </a></li>
+                <li><a href="#"> Careers </a></li>
+              </ul>
+            </details>
 
-	<a href="#">Sign Up</a>
-	
-	</div>
-	</div>
-	
-	<div>
-	<h1>A modern publishing platform</h1>
- 	<p>Grow your audience and build your online brand</p>
-	</div>
-	
-	<div>
-	<button>Start for Free</button>
-	<button>Learn More</button>
-	</div>
+            <details>
+              <summary> <a href="#"> Connect </a> </summary>
+              <ul>
+                <li><a href="#"> Contact </a></li>
+                <li><a href="#"> Newsletter </a></li>
+                <li><a href="#"> LinkedIn </a></li>
+              </ul>
+            </details>
 
-	</div>
-	</header>
+          </div>
+        </div>
+        <div>
+          <a href="#">Login</a>
 
-	<main>
-	<section>
-	<div>
-	<h2>Designed for the future</h2>
-	<div><img src="assets/images/illustration-editor-desktop.svg"/></div>
-	
-	<div> <h2>Introducing an extensible editor</h2>
- 	<p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or change the looks of a blog.</p> </div>
+          <a href="#">Sign Up</a>
 
-	<h2>Robust content management</h2>
-	<p>Flexible content management enables users to easily move through posts. Increase the usability of your blog by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
-	</div>
+        </div>
+      </div>
 
-	<div>
-	<img src="assets/images/illustration-phones.svg"/>
-	<h2>State of the Art Infrastructure</h2>
-	<p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity.This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
-	</div>
+      <div>
+        <h1>A modern publishing platform</h1>
+        <p>Grow your audience and build your online brand</p>
+      </div>
 
-	<div>
-	<img src="assets/images/illustration-laptop-desktop.svg"/>
-	<h2>Free, open, simple</h2>
-	<p>Blogr is a free and open source application backed by a large community of helpful developers. It supports features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
+      <div>
+        <button>Start for Free</button>
+        <button>Learn More</button>
+      </div>
 
-	<h2>Powerful tooling</h2>
-	<p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but capable of producing even the most complicated sites.</p>
-	</div>
-	</section>
-	</main>
+    </div>
+  </header>
 
-	<footer>
-	<div>
-	<img src="assets/images/logo.svg"/> 
-	</div>
-	<div>
-	<h3>Product</h3>
-	<nav>
-	<ul>
-	<li><a href="#">Overview</a></li>
-	<li><a href="#"> Pricing </a></li>
-	<li><a href="#"> Marketplace </a></li>
-	<li><a href="#"> Features </a></li>
-	<li><a href="#"> Integrations </a></li>
-	</ul>
-	</nav>
-	
-	<h3> Company </h3>
-	<nav>
-	<ul>
-	<li><a href="#"> About </a></li>
-	<li><a href="#"> Team </a></li>
-	<li><a href="#"> Blog </a></li>
-	<li><a href="#"> Careers </a></li>
-	</ul>
-	</nav>
-	
-	<h3> Connect </h3>
-	<nav>
-	<ul>
-	<li><a href="#"> Contact </a></li>
-	<li><a href="#"> Newsletter </a></li>
-	<li><a href="#"> LinkedIn </a></li>
-	</ul>
-	</nav>
+  <main>
+    <section>
+      <div>
+        <h2>Designed for the future</h2>
+        <div><img src="assets/images/illustration-editor-desktop.svg" /></div>
 
-	</div>
-	
-	</footer>
+        <div>
+          <h2>Introducing an extensible editor</h2>
+          <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating
+            content.The editor supports management of multiple blogs and allows easy manipulation of embeds
+            such as images, videos, and Markdown. Extensibility with plugins and themes provide easy ways to
+            add functionality or change the looks of a blog.</p>
+        </div>
+
+        <h2>Robust content management</h2>
+        <p>Flexible content management enables users to easily move through posts. Increase the usability of
+          your blog by adding customized categories, sections, format, or flow. With this functionality,
+          you’re in full control.</p>
+      </div>
+
+      <div>
+        <img src="assets/images/illustration-phones.svg" />
+        <h2>State of the Art Infrastructure</h2>
+        <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast
+          connectivity.This ensures your site will load instantly, no matter where your readers are, keeping
+          your site competitive.</p>
+      </div>
+
+      <div>
+        <img src="assets/images/illustration-laptop-desktop.svg" />
+        <h2>Free, open, simple</h2>
+        <p>Blogr is a free and open source application backed by a large community of helpful developers. It
+          supports features such as code syntax highlighting, RSS feeds, social media integration, third-party
+          commenting tools, and works seamlessly with Google Analytics. The architecture is clean and is
+          relatively easy to learn.</p>
+
+        <h2>Powerful tooling</h2>
+        <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and
+          deployment a breeze, but capable of producing even the most complicated sites.</p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div>
+      <img src="assets/images/logo.svg" />
+    </div>
+    <div>
+      <h3>Product</h3>
+      <nav>
+        <ul>
+          <li><a href="#">Overview</a></li>
+          <li><a href="#"> Pricing </a></li>
+          <li><a href="#"> Marketplace </a></li>
+          <li><a href="#"> Features </a></li>
+          <li><a href="#"> Integrations </a></li>
+        </ul>
+      </nav>
+
+      <h3> Company </h3>
+      <nav>
+        <ul>
+          <li><a href="#"> About </a></li>
+          <li><a href="#"> Team </a></li>
+          <li><a href="#"> Blog </a></li>
+          <li><a href="#"> Careers </a></li>
+        </ul>
+      </nav>
+
+      <h3> Connect </h3>
+      <nav>
+        <ul>
+          <li><a href="#"> Contact </a></li>
+          <li><a href="#"> Newsletter </a></li>
+          <li><a href="#"> LinkedIn </a></li>
+        </ul>
+      </nav>
+
+    </div>
+
+  </footer>
 </body>
+
 </html>
