a tag changed to p tag

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div>
 
             <details>
-              <summary> <a href="#">Product</a> </summary>
+              <summary> <p>Product</p> </summary>
               <ul>
                 <li><a href="#">Overview</a></li>
                 <li><a href="#">Pricing</a></li>
@@ -29,7 +29,7 @@
             </details>
 
             <details>
-              <summary> <a href="#">Company</a> </summary>
+              <summary> <p>Company</p> </summary>
               <ul>
                 <li><a href="#"> About </a></li>
                 <li><a href="#"> Team </a></li>
@@ -39,7 +39,7 @@
             </details>
 
             <details>
-              <summary> <a href="#"> Connect </a> </summary>
+              <summary> <p> Connect </p> </summary>
               <ul>
                 <li><a href="#"> Contact </a></li>
                 <li><a href="#"> Newsletter </a></li>
