--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
           <div>
 
             <details>
-              <summary> <p>Product</p> </summary>
+              <summary>
+                <p>Product</p>
+              </summary>
               <ul>
                 <li><a href="#">Overview</a></li>
                 <li><a href="#">Pricing</a></li>
@@ -29,7 +31,9 @@
             </details>
 
             <details>
-              <summary> <p>Company</p> </summary>
+              <summary>
+                <p>Company</p>
+              </summary>
               <ul>
                 <li><a href="#"> About </a></li>
                 <li><a href="#"> Team </a></li>
@@ -39,7 +43,9 @@
             </details>
 
             <details>
-              <summary> <p> Connect </p> </summary>
+              <summary>
+                <p> Connect </p>
+              </summary>
               <ul>
                 <li><a href="#"> Contact </a></li>
                 <li><a href="#"> Newsletter </a></li>
@@ -60,6 +66,7 @@
       <div>
         <h1>A modern publishing platform</h1>
         <p>Grow your audience and build your online brand</p>
+      </div>
 
       <div>
         <button>Start for Free</button>
@@ -72,42 +79,52 @@
   <main>
     <section>
       <div>
-        <h2>Designed for the future</h2>
-        <div><img src="assets/images/illustration-editor-desktop.svg" /></div>
-
         <div>
-          <h2>Introducing an extensible editor</h2>
-          <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating
-            content.The editor supports management of multiple blogs and allows easy manipulation of embeds
-            such as images, videos, and Markdown. Extensibility with plugins and themes provide easy ways to
-            add functionality or change the looks of a blog.</p>
+          <h2>Designed for the future</h2>
+          <div>
+            <div>
+              <img src="assets/images/illustration-editor-desktop.svg" />
+            </div>
+    
+            <div>
+              <div>
+                <h2>Introducing an extensible editor</h2>
+                <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating
+                  content.The editor supports management of multiple blogs and allows easy manipulation of embeds
+                  such as images, videos, and Markdown. Extensibility with plugins and themes provide easy ways to
+                  add functionality or change the looks of a blog.</p>
+              </div>
+              <div>
+                <h2>Robust content management</h2>
+                <p>Flexible content management enables users to easily move through posts. Increase the usability of
+                  your blog by adding customized categories, sections, format, or flow. With this functionality,
+                  you’re in full control.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
-
-        <h2>Robust content management</h2>
-        <p>Flexible content management enables users to easily move through posts. Increase the usability of
-          your blog by adding customized categories, sections, format, or flow. With this functionality,
-          you’re in full control.</p>
-      </div>
-
-      <div>
-        <img src="assets/images/illustration-phones.svg" />
-        <h2>State of the Art Infrastructure</h2>
-        <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast
-          connectivity.This ensures your site will load instantly, no matter where your readers are, keeping
-          your site competitive.</p>
-      </div>
-
-      <div>
-        <img src="assets/images/illustration-laptop-desktop.svg" />
-        <h2>Free, open, simple</h2>
-        <p>Blogr is a free and open source application backed by a large community of helpful developers. It
-          supports features such as code syntax highlighting, RSS feeds, social media integration, third-party
-          commenting tools, and works seamlessly with Google Analytics. The architecture is clean and is
-          relatively easy to learn.</p>
-
-        <h2>Powerful tooling</h2>
-        <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and
-          deployment a breeze, but capable of producing even the most complicated sites.</p>
+  
+        <div>
+          <img src="assets/images/illustration-phones.svg" />
+          <h2>State of the Art Infrastructure</h2>
+          <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast
+            connectivity.This ensures your site will load instantly, no matter where your readers are, keeping
+            your site competitive.</p>
+        </div>
+  
+        <div>
+          <img src="assets/images/illustration-laptop-desktop.svg" />
+          <h2>Free, open, simple</h2>
+          <p>Blogr is a free and open source application backed by a large community of helpful developers. It
+            supports features such as code syntax highlighting, RSS feeds, social media integration, third-party
+            commenting tools, and works seamlessly with Google Analytics. The architecture is clean and is
+            relatively easy to learn.</p>
+  
+          <h2>Powerful tooling</h2>
+          <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and
+            deployment a breeze, but capable of producing even the most complicated sites.</p>
+        </div>
       </div>
     </section>
   </main>
