--- a/index.html
+++ b/index.html
@@ -106,24 +106,37 @@
         </div>
   
         <div>
-          <img src="assets/images/illustration-phones.svg" />
-          <h2>State of the Art Infrastructure</h2>
-          <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast
-            connectivity.This ensures your site will load instantly, no matter where your readers are, keeping
-            your site competitive.</p>
+          <div>
+            <img src="assets/images/illustration-phones.svg" />
+          </div>
+          <div>
+            <h2>State of the Art Infrastructure</h2>
+            <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast
+              connectivity.This ensures your site will load instantly, no matter where your readers are, keeping
+              your site competitive.
+            </p>
+          </div>
         </div>
   
         <div>
-          <img src="assets/images/illustration-laptop-desktop.svg" />
-          <h2>Free, open, simple</h2>
-          <p>Blogr is a free and open source application backed by a large community of helpful developers. It
-            supports features such as code syntax highlighting, RSS feeds, social media integration, third-party
-            commenting tools, and works seamlessly with Google Analytics. The architecture is clean and is
-            relatively easy to learn.</p>
-  
-          <h2>Powerful tooling</h2>
-          <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and
-            deployment a breeze, but capable of producing even the most complicated sites.</p>
+          <div>
+            <img src="assets/images/illustration-laptop-desktop.svg" />
+          </div>
+          <div>
+            <div>
+              <h2>Free, open, simple</h2>
+              <p>Blogr is a free and open source application backed by a large community of helpful developers. It
+                supports features such as code syntax highlighting, RSS feeds, social media integration, third-party
+                commenting tools, and works seamlessly with Google Analytics. The architecture is clean and is
+                relatively easy to learn.</p>
+            </div>
+            <div>
+              <h2>Powerful tooling</h2>
+              <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and
+                deployment a breeze, but capable of producing even the most complicated sites.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
