--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 <body>
   <header>
     <div>
-      <div>
+      <nav>
         <div>
           <div>
             <img src="assets/images/logo.svg" />
           </div>
           <div>
-
             <details>
               <summary>
                 <p>Product</p>
@@ -52,7 +51,6 @@
                 <li><a href="#"> LinkedIn </a></li>
               </ul>
             </details>
-
           </div>
         </div>
         <div>
@@ -61,18 +59,18 @@
           <a href="#">Sign Up</a>
 
         </div>
-      </div>
-
+      </nav>
       <div>
-        <h1>A modern publishing platform</h1>
-        <p>Grow your audience and build your online brand</p>
-      </div>
+        <div>
+          <h1>A modern publishing platform</h1>
+          <p>Grow your audience and build your online brand</p>
+        </div>
 
-      <div>
-        <button>Start for Free</button>
-        <button>Learn More</button>
+        <div>
+          <button>Start for Free</button>
+          <button>Learn More</button>
+        </div>
       </div>
-
     </div>
   </header>
 
